fix word break in tables #54

--- a/web/css/frontend.less
+++ b/web/css/frontend.less
@@ -3,6 +3,10 @@ body {
   word-break: break-word;
 }
 
+table {
+  word-break: normal;
+}
+
 .page-header {
 	margin-bottom: 1.5rem;
 }
